updated and created xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">CovidBlast</string>
+    <string name="user_name">Name</string>
+    <string name="user_score">Score</string>
+    <string name="user_rank">Rank</string>
+    <string name="final_score">Final score</string>
+    <string name="finish_btn">Finish</string>
 </resources>
